finished adding global folder but it does not work like that

--- a/website/sumologic.erb
+++ b/website/sumologic.erb
@@ -5,11 +5,11 @@
           <li>
           <a href="/docs/providers/index.html">All Providers</a>
           </li>
-  
+
           <li>
           <a href="/docs/providers/sumologic/index.html">Sumo Logic Provider</a>
           </li>
-  
+
           <li>
             <a href="#">Data Sources</a>
             <ul class="nav nav-visible">
@@ -20,6 +20,9 @@
                 <a href="/docs/providers/sumologic/d/collector.html">sumologic_collector</a>
               </li>
               <li>
+                <a href="/docs/providers/sumologic/d/global_folder.html">sumologic_global_folder</a>
+              </li>
+              <li>
                 <a href="/docs/providers/sumologic/d/personal_folder.html">sumologic_personal_folder</a>
               </li>
               <li>
@@ -27,7 +30,7 @@
               </li>
             </ul>
           </li>
-  
+
           <li>
           <a href="#">Resources</a>
           <ul class="nav nav-visible">
@@ -75,6 +78,6 @@
         </ul>
       </div>
     <% end %>
-  
+
     <%= yield %>
     <% end %>
